# aulas-aws-afrocodigos

./: aula1-iam.py  aula2-s3.py  aula3-ec2.py  projeto-final.md  pyproject.toml
